--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ parsel = "^1.9.1"
 webdriver-manager = "^4.0.2"
 loguru = "^0.7.2"
 aiohttp = "^3.10.10"
+filetype = "^1.2.0"
 
 [tool.poetry.group.dev.dependencies]
 isort = "^5.13.2"
@@ -21,6 +22,7 @@ ruff = "^0.7.0"
 pytest = {extras = ["cov"], version = "^8.3.3"}
 pytest-cov = "^5.0.0"
 pytest-asyncio = "^0.24.0"
+pytest-httpserver = "^1.1.0"
 
 [build-system]
 requires = ["poetry-core"]
